--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,12 @@
     "version": 2,
     "builds": [
       {
-        "src": "dist/main.js",
+        "src": "package.json",
         "use": "@vercel/node"
       }
     ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "dist/main.js"
-      }
-    ]
+    "env": {
+      "MONGODB_URI": "@mongodb-uri"
+    }
   }
   
