--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,16 @@
     "builds": [
       {
         "src": "package.json",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "config": {
+          "maxDuration": 10
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/dist/main.js"
       }
     ],
     "env": {
